[package]
name = "goolog"
version = "0.4.1"
description = "A wrapper library with a predefined log format."
authors = ["Gooxey <dennis.tiderko@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
publish = true
repository = "https://github.com/Gooxey/goolog.git"
categories = ["development-tools::debugging", "embedded"]
keywords = ["embedded", "esp", "log", "logger", "macros"]

[features]
default = ["timestamp"]
timestamp = ["dep:chrono"]
esp = []

[dependencies]
chrono = { version = "0.4.26", optional = true }
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.19"
