[package]
name = "goolog"
version = "0.11.0"
description = "This library provides the no_std-compatible goolog logger and some macros to simplify printing logs."
authors = ["Gooxey <dennis.tiderko@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
publish = true
repository = "https://github.com/Gooxey/goolog.git"
categories = ["development-tools::debugging", "embedded", "no-std", "no-std::no-alloc"]
keywords = ["embedded", "no-std", "log", "logger", "macros"]

[features]
default = []
std = ["dep:chrono"]

[dependencies]
chrono = { version = "0.4.34", optional = true }
log = "0.4.20"
spin = "0.9.8"
